welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ')' expected but ',' found.
  if(day=1,2,3,4,5){
          ^alarmClock:5: error: illegal start of simple expression
} 
^